--- a/public/index.html
+++ b/public/index.html
@@ -42,4 +42,9 @@
     -->
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
+  <script>
+    function toggleSelected(element) {
+      element.classList.toggle('selected');
+    }
+  </script>
 </html>
